--- a/index.html
+++ b/index.html
@@ -7,11 +7,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
-  <link rel="icon" href="/favicon.ico" />
-  <link rel="manifest" href="/manifest.json" />
+  <link rel="icon" href="%BASE_URL%favicon.ico" />
+  <link rel="manifest" href="%BASE_URL%manifest.json" />
   
-  <script type="module" async src="https://static.rocket.new/rocket-web.js?_cfg=https%3A%2F%2Fretroconve9073back.builtwithrocket.new&_be=https%3A%2F%2Fappanalytics.rocket.new&_v=0.1.17"></script>
-  <script type="module" defer src="https://static.rocket.new/rocket-shot.js?v=0.0.2"></script>
+  <script>
+    (function () {
+      const redirect = sessionStorage.getItem("gh-pages-path");
+      if (redirect) {
+        sessionStorage.removeItem("gh-pages-path");
+        window.history.replaceState(null, "", redirect);
+      }
+    })();
+  </script>
   </head>
 
 <body>
